k8s/sshwifty/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshwifty-lb
  namespace: sshwifty
  labels:
    app.kubernetes.io/name: sshwifty
  annotations:
    io.cilium/lb-ipam-ips: "10.5.0.6"
    external-dns.alpha.kubernetes.io/hostname: terminal.internal.onoe.dev
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8182
      name: https
  selector:
    app.kubernetes.io/name: sshwifty
