k8s/sshwifty/manifests/networkpolicy-allow-bastion-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bastion-egress
  namespace: sshwifty
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.2.0.2/32
      ports:
        - protocol: TCP
          port: 22
