k8s/sshwifty/manifests/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: sshwifty
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
